2004-09-28  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in: Added uk to ALL_LINGUAS.

2004-09-27  Bart Hakvoort  <gparted@users.sf.net>

	*	include/Win_GParted.h,
		src/Win_GParted.cc: changed representation of hardisk info

2004-09-27  Bart Hakvoort  <gparted@users.sf.net>

	*	src/Partition.cc: marked "Unallocated" for translatation

2004-09-26  Bart Hakvoort  <gparted@users.sf.net>

	*	src/Dialog_Base_Partition.cc,
		src/	Dialog_Partition_New.cc: fixed alignment problems with some languages

2004-09-26  Bart Hakvoort  <gparted@users.sf.net>

	*	src/Win_GParted.cc: fixed bug that occured while converting the filesystem of a new partition
	*	src/Dialog_About.cc: removed "documented by" tab (didn't need it yet) and fixed alignments of button
	with some languages.

2004-09-26  Bart Hakvoort  <gparted@users.sf.net>

	*	src/Win_GParted.cc: fixed bug with check for max amount of partitions while pasting a copied partition.
	*	src/Partition.cc: changed colors of ext2, ext3 and linux-swap
	
2004-09-25  Raphael Higino  <raphaelh@cvs.gnome.org>

	*	src/Win_GParted.cc: Fixed typo bugs (word "than" written 
as "then" in two strings)

2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	src/Win_GParted.h,
		src/Win_GParted.cc: removed expander. The diskinfo is now always visible.
	*	src/Dialog_Partition_Info.cc: fixed small bug with overlapping text. 
	*	src/Dialog_About.cc: use VERSION instead of hardcoded numbers

2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	Dialog_About.cc: made "Translated by" tab a bit more sensible, also added an translator-credits string.

2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	Operation.h,
		Operation.cc,
		Partition.h,
		Partition.cc
		Dialog_Partition_Copy.cc,
		Dialog_Partition_Info.cc,
		Dialog_Partition_New.cc,
		Win_GParted.cc: prepared "copy of" and "New Partition" for i18n and did some cleanups on the way...
		I believe all relevant strings are now properly marked for translation.	
		