@@ -1,3 +1,10 @@
+2004-09-28 Bart Hakvoort  <gparted@users.sf.net>
+
+	*	src/VBox_VisualDisk.cc: marked 2 minor strings for translation (is a duplicate of an existing string in POT file)
+	*	src/Dialog_About.cc: made names (author/translators) selectable
+	*	include/Dialog_Partition_Info.h,
+		src/Dialog_Partition_Info.cc: solved some alignmentproblems which showed up in certain locales.
+
 2004-09-28  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* configure.in: Added uk to ALL_LINGUAS.
